--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Covid Project</title>
   </head>
   <body>
-    <div id="main"></div>
+    <div id="main">hello</div>
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
