made project into a react app

--- a/covidproject/public/index.html
+++ b/covidproject/public/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>Covid Project</title>
+    <h1 id="main-header"> COVID19 Variants of Concern</h1>
+    <link href="../src/index.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div id="main"></div>
+    <div id="root"></div>
+    <div id="react_test"></div>
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
