added epsilon and instructions

--- a/covidproject/public/index.html
+++ b/covidproject/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Covid Project</title>
-    <h1 id="main-header"> COVID19 Variants of Concern</h1>
+    <h1 id="main-header"> COVID19: Variants of Concern</h1>
+    <p id="instructions">Vaccination rates in the US are promising for slowing down the spread of COVID19; however, we are also seeing a number of concerning variants that threaten to extend the lifetime of the pandemic. 
+      "Variants of concern" is a classification the CDC gives to the COVID variants that are being the most actively monitored. Below you will see an illustration of a COVID particle with the 5 variants of concern on some of the spikes. 
+      Click on a variant to read more information about it and access links to more information.  </p>
     <link href="../src/index.css" rel="stylesheet" type="text/css">
   </head>
   <body>
